test(bidding): add unit tests for new services
Add JUnit 5 unit tests for all 7 new bidding services:
- DocumentParserServiceTest: Tests for PdfParserService and DocxParserService
- ClauseExtractorServiceTest: Tests for Chinese and dot notation clause extraction
- ClauseMatcherServiceTest: Tests for clause matching logic
- FormatCheckerServiceTest: Tests for document format validation
- ReportGeneratorServiceTest: Tests for report generation
- EmbeddingServiceTest: Tests for embedding generation with Mockito
- BiddingCheckServiceTest: Tests for orchestration flow